--- a/src/app.scss
+++ b/src/app.scss
@@ -1,6 +1,6 @@
 @import "./variables.scss";
 
-@import "material-components-web/material-components-web";
+// @import "material-components-web/material-components-web";
 
 html,
 body {
