--- a/src/components/home/index.scss
+++ b/src/components/home/index.scss
@@ -31,9 +31,9 @@
       color: $mdc-theme-primary;
     }
 
-    &--active.mdc-button {
-      background-color: $mdc-theme-primary;
-      color: #fff;
+    &--active {
+      background-color: $mdc-theme-primary !important;
+      color: #fff !important;
     }
 
     i {
