--- a/src/components/layout/header/header.scss
+++ b/src/components/layout/header/header.scss
@@ -38,7 +38,7 @@ $menu-horizontal-padding: 30px;
     box-shadow: 0 5px 10px $app-shadow;
     margin-bottom: 35px;
     &-toolbar {
-      @include height($toolbar-height);
+      // @include height($toolbar-height);
       padding: 0 $menu-horizontal-padding;
       border-bottom: 1px solid #eee;
       &-welcome-message {
@@ -46,7 +46,7 @@ $menu-horizontal-padding: 30px;
         color: $secondary-color;
       }
       &-menu {
-        @include horizontal-menu($toolbar-height, 15px);
+        // @include horizontal-menu($toolbar-height, 15px);
         display: flex;
         justify-content: space-between;
         &-search {
@@ -72,7 +72,7 @@ $menu-horizontal-padding: 30px;
       }
     }
     &-menu {
-      @include height($menu-height);
+      // @include height($menu-height);
       padding: 0 $menu-horizontal-padding;
       img {
         vertical-align: middle;
