--- a/src/components/breadcrumb/breadcrumb.scss
+++ b/src/components/breadcrumb/breadcrumb.scss
@@ -1,10 +1,15 @@
 @import "../../variables.scss";
 
 .breadcrumb {
+  display: block;
+  width: 100%;
+  position: relative;
+  margin-bottom: 20px;
   ul {
     display: flex;
     list-style-type: none;
     margin: 0;
+    padding: 0;
     font-size: 0.9em;
   }
 
