--- a/_LEZIONI/02_HTML_CSS/assets/style.css
+++ b/_LEZIONI/02_HTML_CSS/assets/style.css
@@ -2,7 +2,7 @@
 
 /* Global */
 
-/* body,
+body,
 html {
   margin: 0;
   padding: 0;
@@ -19,10 +19,10 @@ a {
 img {
   max-width: 100%;
   height: auto;
-} */
+}
 
 /* Container */
-/* .container {
+.container {
   position: relative;
   top: 0;
   left: 0;
@@ -37,11 +37,11 @@ img {
   .container {
     width: 100%;
   }
-} */
+}
 
 /* Header */
 
-/* .header {
+.header {
   position: relative;
   top: 0;
   left: 0;
@@ -103,21 +103,21 @@ img {
     padding-left: 5px;
     padding-right: 5px;
   }
-} */
+}
 
 /* main */
 
-/* .main {
+.main {
   position: relative;
   top: 0;
   left: 0;
   width: 100%;
   padding: 20px 0;
-} */
+}
 
 /* Box list */
 
-/* .box-list {
+.box-list {
   position: relative;
   top: 0;
   left: 0;
@@ -150,10 +150,10 @@ img {
   .box-list .box {
     width: auto;
   }
-} */
+}
 
 /* Footer */
-/* .footer {
+.footer {
   position: relative;
   top: 0;
   left: 0;
@@ -172,4 +172,4 @@ img {
   top: 0;
   left: 0;
   width: 40px;
-} */
+}
