feat: add clean script to package.json and update dependencies
style: migrate from @import to @use for SCSS variables in multiple components

fix: update logo import in Header menu component to use URL constructor for better path resolution

--- a/src/components/home/calendar/CalendarTable/index.scss
+++ b/src/components/home/calendar/CalendarTable/index.scss
@@ -1,4 +1,5 @@
-@import "../../../../variables";
+@use "sass:color";
+@use "../../../../variables" as *;
 
 // table header
 .calendar {
@@ -37,7 +38,7 @@ $cell-size: 2.5em;
       line-height: $cell-size;
       width: $cell-size;
       &:hover {
-        background: lighten($mdc-theme-secondary, 35);
+        background: color.adjust($mdc-theme-secondary, $lightness: 35%);
       }
       &.selected {
         background: $mdc-theme-primary;
