--- a/src/components/home/index.scss
+++ b/src/components/home/index.scss
@@ -1,4 +1,5 @@
-@import "../../variables.scss";
+@use "sass:color";
+@use "../../variables.scss" as *;
 
 .home {
   .mdc-card {
@@ -54,7 +55,7 @@
     padding: 40px 20px;
     border-bottom: 1px solid #eee;
     &:hover {
-      background-color: lighten($mdc-theme-primary, 36);
+      background-color: color.adjust($mdc-theme-primary, $lightness: 36%);
     }
     h3 {
       margin: 0 0 10px 0;
