--- a/src/components/layout/header/header.scss
+++ b/src/components/layout/header/header.scss
@@ -1,4 +1,4 @@
-@import "../../../variables.scss";
+@use "../../../variables.scss" as *;
 $toolbar-height: 56px;
 $toolbar-horizontal-padding: 15px;
 $menu-height: 76px;
