--- a/_LEZIONI/02_HTML_CSS/assets/style.css
+++ b/_LEZIONI/02_HTML_CSS/assets/style.css
@@ -1,1 +1,101 @@
-/* Questo è un commento */
+body {
+  font-family: sans-serif;
+}
+.container{
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100%;
+    max-width: 960px;
+    margin: 0 auto;
+}
+.header{
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 1px solid black;
+}
+
+.box-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px; 
+  width: 100%; 
+  padding: 20px 0;
+}
+.box {
+ width: 30%;
+  height: 250px;
+  background-color: gray;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: bold;
+  border-radius: 8px;
+  font-size: 24px;
+}
+@media screen and (max-width: 467px){
+    .box-list{
+        flex-direction:column ;
+
+    }
+    .box-list .box{
+        width: auto;
+    }
+}
+.footer{
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    border-top: 1px solid black;
+}
+.credits{
+     display: flex;
+  justify-content: flex-end; 
+  padding: 20px 40px;
+}
+.logo{
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+   
+
+}
+.logo img {
+    width: 50px;
+    height: 50px;
+}
+.main-menu {
+  display: flex;
+  justify-content: flex-end; 
+  padding: 20px 40px;
+}
+.main-menu ul {
+  list-style: none;
+  display: flex;
+  gap: 20px;
+  margin: 0;
+  padding: 0;
+}
+
+.main-menu ul li a {
+  text-decoration: none;
+  color: black;
+  font-size: 17px;
+}
+.credits {
+    display: flex;
+  justify-content: flex-end; 
+  padding: 20px 40px;
+  border-bottom: 1px solid black;
+
+}
