--- a/_LEZIONI/02_HTML_CSS/assets/style.css
+++ b/_LEZIONI/02_HTML_CSS/assets/style.css
@@ -1,1 +1,86 @@
-/* Questo è un commento */
+body {
+    font-family: 'Roboto', sans-serif;
+}
+.container {
+    margin: 40px;
+}
+header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-bottom: 10px;
+    border-bottom: 1px solid black;
+    margin-bottom: 40px;
+}
+
+header .logo img{
+    width: 60px;
+}
+footer .logo img {
+    width: 30px;
+}
+ul li {
+    display: inline-flex;
+    padding: 5px;
+}
+
+.box-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    justify-items: center;
+    gap: 20px;
+}
+.box {
+    background-color: lightgray;
+    width: 30%;
+    aspect-ratio: 1/1;
+    margin: 0px;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+}
+.box span {
+    color: black;
+    font-weight: bold;
+    font-size: 24px;
+}
+.footer {
+    padding-top: 10px;
+    border-top: 1px solid black;
+    margin-top: 40px;
+    display: flex;
+    justify-content: space-between;
+    align-items: end;
+}
+.footer .credits {
+    font-size: 10px;
+}
+
+@media (max-width: 600px) {
+    .box-list {
+        grid-template-columns: 1fr;
+        justify-items: center;
+    }
+    .box {
+        width: 90%;
+    }
+    header .logo img {
+        width: 25px;
+    }
+    footer .logo img {
+        width: 25px;
+    }
+    .main-menu {
+        font-size: 13px;
+    }
+    
+}
+
+a {
+    color: black;
+    text-decoration: none;
+}
+a:hover {
+    color: aqua;
+}
